--- a/.github/workflows/code_quality.yaml
+++ b/.github/workflows/code_quality.yaml
@@ -5,15 +5,19 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
           go-version: '1.22.7'
+
       - name: Unit tests
         run: make test
+
       - name: Linter
         uses: golangci/golangci-lint-action@v6.1.1
-        run: make lint
+        with:
+          args: make lint
