fix github action linter

--- a/.github/workflows/code_quality.yaml
+++ b/.github/workflows/code_quality.yaml
@@ -20,4 +20,4 @@ jobs:
       - name: Linter
         uses: golangci/golangci-lint-action@v6.1.1
         with:
-          args: make lint
+          args: ./pkg/... ./internal/...
